--- a/index.html
+++ b/index.html
@@ -16,12 +16,17 @@
     <div class="h1 text-light text-center">search for any movie or serie</div>
     <div class="d-flex justify-content-end search-bar">
       <div class="input-group d-flex my-2 my-lg-1 p-2">
-        <input class="form-control" type="text" placeholder="Search Movie">
-        <button class="btn btn-light bg-dark text-light" type="submit">Search</button>
+        <input id="searchInput" class="form-control" type="text" placeholder="Search Movie">
+        <button id="searchBtn" class="btn btn-light bg-dark text-light">Search</button>
       </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row gy-4 text-center">
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/app.js"></script>
 </body>
 </html>
